# blizzard-plugin-sdk

./: .gitignore
libraries/: CMakeLists.txt  blizzard.pc.in  blizzard_rbus_plugin.h
libraries/proto/: description.proto  descriptor.proto  messages.proto  value.proto
templates/: generate_plugin.py  sample.yaml
templates/tmpl/c/: CMakeLists.txt.j2  impl.c.j2  impl.h.j2  plugin.c.j2
